rocket-db/core/codegen/tests/ui-fail-nightly/responder-types.stderr
error[E0277]: the trait bound `u8: Responder<'_, '_>` is not satisfied
   --> $DIR/responder-types.rs:5:5
    |
5   |     thing: u8,
    |     ^^^^^^^^^ the trait `Responder<'_, '_>` is not implemented for `u8`
    |
note: required by `respond_to`
   --> $DIR/responder.rs:298:5
    |
298 |     fn respond_to(self, request: &'r Request<'_>) -> response::Result<'o>;
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0277]: the trait bound `Header<'_>: From<u8>` is not satisfied
  --> $DIR/responder-types.rs:11:5
   |
11 |     other: u8,
   |     ^^^^^^^^^ the trait `From<u8>` is not implemented for `Header<'_>`
   |
   = help: the following implementations were found:
             <Header<'static> as From<&Cookie<'_>>>
             <Header<'static> as From<&ExpectCt>>
             <Header<'static> as From<&Frame>>
             <Header<'static> as From<&Hsts>>
           and 8 others
   = note: required because of the requirements on the impl of `Into<Header<'_>>` for `u8`

error[E0277]: the trait bound `u8: Responder<'_, '_>` is not satisfied
   --> $DIR/responder-types.rs:16:5
    |
16  |     thing: u8,
    |     ^^^^^^^^^ the trait `Responder<'_, '_>` is not implemented for `u8`
    |
note: required by `respond_to`
   --> $DIR/responder.rs:298:5
    |
298 |     fn respond_to(self, request: &'r Request<'_>) -> response::Result<'o>;
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0277]: the trait bound `Header<'_>: From<u8>` is not satisfied
  --> $DIR/responder-types.rs:17:5
   |
17 |     other: u8,
   |     ^^^^^^^^^ the trait `From<u8>` is not implemented for `Header<'_>`
   |
   = help: the following implementations were found:
             <Header<'static> as From<&Cookie<'_>>>
             <Header<'static> as From<&ExpectCt>>
             <Header<'static> as From<&Frame>>
             <Header<'static> as From<&Hsts>>
           and 8 others
   = note: required because of the requirements on the impl of `Into<Header<'_>>` for `u8`

error[E0277]: the trait bound `Header<'_>: From<std::string::String>` is not satisfied
  --> $DIR/responder-types.rs:24:5
   |
24 |     then: String,
   |     ^^^^^^^^^^^^ the trait `From<std::string::String>` is not implemented for `Header<'_>`
   |
   = help: the following implementations were found:
             <Header<'static> as From<&Cookie<'_>>>
             <Header<'static> as From<&ExpectCt>>
             <Header<'static> as From<&Frame>>
             <Header<'static> as From<&Hsts>>
           and 8 others
   = note: required because of the requirements on the impl of `Into<Header<'_>>` for `std::string::String`

error[E0277]: the trait bound `usize: Responder<'_, '_>` is not satisfied
   --> $DIR/responder-types.rs:28:13
    |
28  | fn foo() -> usize { 0 }
    |             ^^^^^ the trait `Responder<'_, '_>` is not implemented for `usize`
    |
note: required by `route::handler::<impl Outcome<rocket::Response<'o>, Status, rocket::Data<'o>>>::from`
   --> $DIR/handler.rs:188:5
    |
188 |     pub fn from<R: Responder<'r, 'o>>(req: &'r Request<'_>, responder: R) -> Outcome<'r> {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
